[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
validator = { version = "0.14.0", features = ["derive"] }
thiserror = "1.0.29"
async-trait = "0.1"
http-body = "0.4.3"