[package]
name = "grpc-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "grpc-demo-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
tokio = {version = "1",features = ["full"]}

[build-dependencies]
tonic-build = "0.7.2"
