[package]
name = "grpc-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "grpc-hello-client"
path = "src/client.rs"

[dependencies]
protobuf = "2"
grpc = "0.7.1"
grpc-protobuf = "0.7.1"
futures = "~0.3"
tls-api = "~0.3"

[build-dependencies]
protoc-rust-grpc = "0.8.3"
protobuf-codegen = "3.0.3"
